# xuanji

./: .env.example  .gitignore  DEEPSEEK_CONFIG.md  DESIGN.md  README.md  check_app.sh  config.yaml.example  electric-compose.yaml  pyproject.toml  sandbox-docker-compose.yaml  schema.sql  verify_setup.py
.qoder/plans/: 资料库功能_PRD_与设计_14a243aa.md
docs/: 01-architecture.md  02-modules.md  03-data.md  04-api.md  05-concurrency.md  06-observability.md  07-security.md  08-deployment.md  09-config.md  10-testing.md  11-migration-v1-to-v2.md  12-hook-hardening.md  13-test-design-hook-hardening.md  14-e2e-test-design.md  15-e2e-fix-structured-log-and-timing.md  concurrency-verification-report.md  e2e-05-langfuse-trace-deep-analysis.md  e2e-05-search-regression-report.md  iteration-v2.1-plan.md  langfuse-trace-fix-design.md  sdk-verification-report.md  test-cases-for-known-risks.md
docs/ssot/: feature-flags.md  locks.md  ports.md  tasks.md  threats.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
shared_hooks/: audit_logger.py  cost_guard.py  hooks.yaml  langfuse_trace.py  loop_detector.py  permission_gate.py  retry_tracker.py  sandbox_guard.py  structured_log.py
tests/: conftest.py
tests/e2e/: conftest.py  test_course_demo.py  test_e2e_01_slash.py  test_e2e_02_routing.py  test_e2e_03_multi_turn.py  test_e2e_04_bootstrap.py  test_e2e_05_search.py  test_e2e_06_browse_code.py  test_e2e_07_memory_save.py  test_e2e_08_search_memory.py  test_e2e_09_pruning.py  test_e2e_10_langfuse_trace.py  test_e2e_11_events.py  test_e2e_12_reliability.py  test_e2e_13_sandbox_guard.py  test_e2e_14_credential_isolation.py  test_e2e_15_audit_deny.py  test_persona_a.py  test_persona_f.py
tests/fixtures/: hook_tool_inputs.py  hook_yaml_samples.py  security_policy_samples.py
tests/integration/: conftest.py  test_adapter_integration.py  test_deny_observability.py  test_guardrail_deny_flow.py  test_hook_chain.py  test_security_chain.py  test_trace_quality.py  test_two_layer_config.py
tests/unit/: test_v3_fixes.py
workspace-init/: agent.md  memory.md  soul.md  user.md
xiaopaw/: __init__.py  diagnostic.py  event_bus.py  main.py  models.py  runner.py
xiaopaw/agents/: main_crew.py  models.py  skill_crew.py
xiaopaw/api/: capture_sender.py  schemas.py  test_server.py
xiaopaw/cleanup/: service.py
xiaopaw/config/: flags.py  safety.py  validator.py
xiaopaw/cron/: automation.py  models.py  service.py  storage.py
xiaopaw/feishu/: downloader.py  listener.py  sender.py  session_key.py
xiaopaw/frontend/: __init__.py  api.py  auth.py  expert.py  server.py  store.py
xiaopaw/hook_framework/: __init__.py  crew_adapter.py  loader.py  registry.py
(+175 files in other folders)
