[project]
name = "xiaopaw-v2"
version = "3.0.0"
description = "XiaoPaw v3 — Feishu local AI work assistant with Hook framework"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "aiohttp>=3.9",
    "requests>=2.31",
    "crewai>=1.9.3",
    "lark-oapi>=1.3",
]

[project.optional-dependencies]
full = [
    "psycopg2-binary>=2.9",
    "openai>=1.0",
    "croniter>=2.0",
    "filelock>=3.13",
    "prometheus_client>=0.20",
    "cachetools>=5.3",
    "langfuse>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 600
markers = [
    "integration: integration tests (deselect with -m 'not integration')",
    "llm_dependent: tests that depend on LLM behavior",
    "sandbox: tests that require AIO-Sandbox",
    "sandbox_required: e2e tests that require sandbox MCP",
    "pgvector_required: e2e tests that require pgvector",
    "security: security attack/defense tests",
    "observability: observability/Langfuse verification tests",
    "no_llm: e2e tests without LLM (slash commands, routing)",
    "e2e: end-to-end tests via TestAPI",
    "full: full e2e tests with sandbox + pgvector",
]

[tool.coverage.run]
source = ["xiaopaw", "shared_hooks"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
